--- a/assets/styles/subscribe/index.css
+++ b/assets/styles/subscribe/index.css
@@ -53,7 +53,7 @@ main {
 
 .logo_wrapper {
     height: 90px;
-    margin-left: 10%;
+    margin-left: 17%;
     display: flex;
 }
 
@@ -67,15 +67,16 @@ main {
 }
 
 .logo_text {
-    font-weight: 400;
+    color: #fff;
+    font-weight: 700;
     display: inline;
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 1.275em;
     letter-spacing: 1.25px;
     line-height: 1.5;
     align-self: center;
     text-shadow: -2px 2px 1px #777;
-    transition: .3s;
+    z-index: 999;
+    text-decoration: none;
 }
 
 
@@ -92,7 +93,7 @@ main {
     width: 100%;
     top: 0;
     right: 0;
-    margin-right: 10%;
+    margin-right: 17%;
 }
 
 .main_nav-list {
@@ -114,7 +115,6 @@ main {
     color: #fff;
     text-decoration: none;
     text-shadow: -2px 2px 2px #777;
-    transition: .3s
 }
 
 .nav_list-item {
@@ -123,7 +123,6 @@ main {
     color: #fff;
     text-decoration: none;
     text-shadow: -2px 2px 2px #777;
-    transition: .3s
 }
 
 .home {
@@ -163,7 +162,7 @@ main {
     width: 85vw;
     text-align: center;
     line-height: 35px;
-    animation-delay: .7s;
+    animation-delay: .5s;
 }
 
 .header_title::after {
@@ -185,7 +184,7 @@ main {
     text-align: center;
     letter-spacing: .07px;
     margin-top: .65em;
-    animation-delay: .5s;
+    animation-delay: .3s;
 }
 
 /* Form Styles  ---------------- */
@@ -206,6 +205,7 @@ main {
     padding: 100px 100px 110px 100px;
     justify-content: center;
     border-radius: 5px;
+    animation-delay: .2s;
 }
 
 .form-logo {
@@ -260,17 +260,13 @@ main {
 .form_button {
     width: 100%;
     margin: 0 auto;
-    color: #484141;
+    color: #fff;
     font-size: 14px;
     padding: 28px 40px 25px;
     transition: .3s;
     text-align: center;
     border-radius: 3px;
     text-transform: uppercase;
-}
-
-.form_button:hover {
-    color: #fff;
     background-color: #00a8b3;
     border: 1px solid #00a8b3;
 }
