--- a/activities/index.css
+++ b/activities/index.css
@@ -47,7 +47,7 @@ body {
     color: #fff;
     height: 90px;
     width: 100%;
-    background-color: #fff;
+    background-color: rgba(35, 40, 55, 0.95);
     z-index: 2000;
     transition: .35s;
 }
@@ -68,7 +68,7 @@ body {
 }
 
 .logo_text {
-    color: #000;
+    color: #fff;
     font-weight: 700;
     display: inline;
     font-size: 1.6em;
@@ -105,7 +105,7 @@ body {
 .nav_list-item {
     font-family: "Montserrat";
     font-size: 14px;
-    color: #000;
+    color: #fff;
     text-decoration: none;
 }
 
