--- a/index/index.css
+++ b/index/index.css
@@ -34,6 +34,12 @@ body {
     background-attachment: fixed;
 }
 
+@media only screen and (max-width: 1440px) and (max-height: 1400px) {
+    .background-image {
+        height: 100vh;
+    }
+}
+
 /* Section Divider Tags Styles ------------------------------------------------  */
 
 .section_title {
@@ -69,7 +75,7 @@ body {
     position: fixed;
     top: 0;
     color: #fff;
-    height: 100px;
+    height: 6.250em;
     width: 100%;
     background-color: transparent;
     z-index: 2000;
@@ -78,22 +84,22 @@ body {
 
 .main_nav.blue {
     background-color: rgba(35, 40, 55, 0.95);
-    height: 100px;
+    height: 6.250em;
 }
 
 .logo_wrapper {
-    height: 100px;
+    height: 6.250em;
     margin-left: 14%;
     display: flex;
 }
 
 .logo_image {
-    height: 39px;
-    width: 39px;
+    height: 2.2em;
+    width: 2.2em;
     border-radius: 100%;
     align-self: center;
     margin-right: 15px;
-    filter: drop-shadow(-1px 1px 1px #777);
+    filter: drop-shadow(-1px 1px 1px #000);
 }
 
 .logo_text {
@@ -104,7 +110,7 @@ body {
     letter-spacing: 1.25px;
     line-height: 1.5;
     align-self: center;
-    text-shadow: -2px 2px 1px #888;
+    text-shadow: -2px 2px 1px #000;
     transition: .3s;
     z-index: 999;
     text-decoration: none;
@@ -112,7 +118,7 @@ body {
 
 .nav_list-wrapper {
     position: fixed;
-    height: 100px;
+    height: 6.250em;
     width: 100%;
     top: 0;
     right: 0;
@@ -120,7 +126,7 @@ body {
 }
 
 .main_nav-list {
-    height: 100px;
+    height: 6.250em;
     display: flex;
     align-items: center;
     float: right;
@@ -134,11 +140,17 @@ body {
 
 .nav_list-item {
     font-family: "Montserrat";
-    font-size: 14px;
+    font-size: .9em;
     color: #fff;
     text-decoration: none;
-    text-shadow: -2px 2px 2px #777;
-    transition: .3s
+    text-shadow: -2px 2px 1px #000;
+    transition: .3s;
+    opacity: .85;
+}
+
+.nav_list-item:hover {
+    transition: .3s;
+    opacity: 1;
 }
 
 .explore {
@@ -153,11 +165,22 @@ body {
     padding-right: 40px;
 }
 
+@media only screen and (max-width: 1980px) and (max-height: 1100px) {
+  .nav_list-wrapper {
+    margin-right: 8%;
+  }
+
+  .logo_wrapper {
+      margin-left: 8%;
+  }
+}
+
 @media only screen and (max-width: 1100px) {
     .main_nav {
         display: none;
     }
 }
+
 
 /* Main Hero Wrapper and Heading Styles ------------------------------------------------  */
 
@@ -166,7 +189,7 @@ body {
     flex-direction: column;
     justify-content: center;
     position: absolute;
-    top: 32vh;
+    top: 32.5%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 65vh;
@@ -176,7 +199,7 @@ body {
 .header_title {
     align-self: center;
     font-family: "Cambay";
-    font-size: 8em;
+    font-size: 10em;
     font-weight: 800;
     letter-spacing: -5px;
     color: #fff;
@@ -201,7 +224,7 @@ body {
     font-family: "Cambay";
     font-weight: 700;
     color: #fff;
-    font-size: 1.275em;
+    font-size: 1.375em;
     text-align: center;
     line-height: 1.5em;
     letter-spacing: 2.275px;
@@ -232,6 +255,31 @@ body {
     color: #fff;
     background-color: #e26f6f;
     border: 1px solid #e26f6f;
+}
+
+@media only screen and (max-width: 1980px) and (max-height: 1100px) {
+    .main_header {
+        top: 38;
+    }
+    
+    .header_title {
+        font-size: 6em;
+    }
+
+    .header_description {
+        font-size: 1em;
+        margin-top: 2.5em;
+    }
+
+    .button {
+        margin-top: 1em;
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .main_header {
+        top: 50%;
+    }
 }
 
 @media only screen and (max-width: 950px) {
@@ -639,6 +687,7 @@ body {
 .content_right {
     background-color: #2d3240;
     padding: 95px 100px;
+    width: 100%;
 }
 
 .content_paragraph {
@@ -715,32 +764,10 @@ body {
 
 @media only screen and (max-width: 1200px) {
     .content_right {
-        padding: 95px 100px;
-        height: 200px;
-        border-bottom: none;
-        margin-top: 2%;
+       display: none;
     }
 
     .content_button {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1100px) {
-    .content_right {
-        padding: 95px 100px;
-        height: 200px;
-        border-bottom: none;
-        background-color: #00a8b3;
-    }
-
-    .content_button {
-        display: inline;
-    }
-}
-
-@media only screen and (max-width: 525px) {
-    .content_right {
         display: none;
     }
 }
@@ -840,10 +867,4 @@ body {
     text-align: center;
     font-size: 75%;
     opacity: 0.7;
-}
-
-@media only screen and (max-width: 1100px) {
-    #footer {
-        display: none;
-    }
 }
