--- a/index/index.css
+++ b/index/index.css
@@ -77,8 +77,7 @@ body {
     color: #fff;
     height: 6.250em;
     width: 100%;
-    background-color: transparent;
-    z-index: 2000;
+    z-index: 999;
     transition: .35s;
 }
 
@@ -111,25 +110,25 @@ body {
     line-height: 1.5;
     align-self: center;
     text-shadow: -2px 2px 1px #000;
-    transition: .3s;
     z-index: 999;
     text-decoration: none;
+    transition: .3s;
 }
 
 .nav_list-wrapper {
     position: fixed;
-    height: 6.250em;
-    width: 100%;
     top: 0;
     right: 0;
+    height: 6.250em;
+    width: 100%;
     margin-right: 14%;
 }
 
 .main_nav-list {
-    height: 6.250em;
     display: flex;
     align-items: center;
     float: right;
+    height: 6.250em;
     font-size: .95em;
 }
 
@@ -144,35 +143,28 @@ body {
     color: #fff;
     text-decoration: none;
     text-shadow: -2px 2px 1px #000;
-    transition: .3s;
     opacity: .85;
+    transition: .3s;
 }
 
 .nav_list-item:hover {
-    transition: .3s;
     opacity: 1;
+    transition: .3s;
 }
 
-.explore {
+.explore, .food , .contact {
     padding-right: 40px;
 }
 
-.food {
-    padding-right: 40px;
-}
-
-.contact {
-    padding-right: 40px;
-}
 
 @media only screen and (max-width: 1980px) and (max-height: 1100px) {
-  .nav_list-wrapper {
-    margin-right: 8%;
-  }
+    .nav_list-wrapper {
+        margin-right: 8%;
+    }
 
-  .logo_wrapper {
-      margin-left: 8%;
-  }
+    .logo_wrapper {
+        margin-left: 8%;
+    }
 }
 
 @media only screen and (max-width: 1100px) {
@@ -189,24 +181,24 @@ body {
     flex-direction: column;
     justify-content: center;
     position: absolute;
+    height: 65vh;
+    width: 60%;
     top: 32.5%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 65vh;
-    width: 60%;
 }
 
 .header_title {
-    align-self: center;
     font-family: "Cambay";
     font-size: 10em;
     font-weight: 800;
     letter-spacing: -5px;
     color: #fff;
+    line-height: 35px;
     text-shadow: -2px 2px 2px #000;
     width: 60%;
+    align-self: center;
     text-align: center;
-    line-height: 35px;
     animation-delay: .5s;
 }
 
@@ -239,16 +231,16 @@ body {
 }
 
 .button {
-    margin-top: 2em;
-    color: #fff;
-    border: 1px solid #fff;
+    color: #fff;;
     line-height: 1px;
     font-size: 16px;
     text-decoration: none;
+    text-align: center;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    margin-top: 2em;
     padding: 28px 40px 25px;
     transition: .3s;
-    text-align: center;
-    border-radius: 3px;
 }
 
 .button:hover {
@@ -455,16 +447,16 @@ body {
 }
 
 .post_overlay-content {
-    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: fit-content;
 }
 
 .post_heading {
+    font-size: 1.25em;
     align-self: center;
     margin-bottom: 0.438em;
-    font-size: 1.25em;
 }
 
 .post_description {
@@ -481,10 +473,10 @@ body {
 
 .overlay_button {
     color: #fff;
-    border: 1px solid #fff;
     line-height: 1em;
     font-size: 13px;
     text-decoration: none;
+    border: 1px solid #fff;
     padding: 12px 100px 7px;
     transition: .3s;
 }
@@ -533,8 +525,8 @@ body {
 }
 
 .video_content-wrapper {
-    height: 650px;
     display: flex;
+    height: 650px;
     border-bottom: 20px solid #e26f6f;
 }
 
@@ -543,24 +535,24 @@ body {
 }
 
 .video_overlay {
+    position: absolute;
     height: 650px;
     width: 1155.550px;
-    position: absolute;
     background: -webkit-radial-gradient(50% 55%, ellipse closest-corner, rgba(75, 101, 121, 0.42) 1%, rgba(0, 17, 39, 0.6) 100%);
 }
 
 .video_link-wrapper {
+    position: absolute;
     height: 650px;
     width: 1155.550px;
-    position: absolute;
 }
 
 .video_link {
+    color: #fff;
     font-family: "Cambay";
+    font-size: 3em;
     font-weight: 800;
     letter-spacing: 1px;
-    color: #fff;
-    font-size: 3em;
     text-shadow: -2px 2px 1px #777;
     text-decoration: none;
     position: absolute;
@@ -572,14 +564,14 @@ body {
 
 @media only screen and (max-width: 1900px) {
     .video_content-wrapper {
-        height: 534.347px;
         display: flex;
+        height: 534.347px;
         border-bottom: 20px solid #e26f6f;
     }
 
     .video {
-        width: 950px;
         height: auto;
+        width: 950px;
     }
 
     .video_overlay {
@@ -588,28 +580,28 @@ body {
     }
 
     .video_link-wrapper {
+        position: absolute;
         height: 534.347px !important;
         width: 950px;
-        position: absolute;
     }
 
     .video_link-wrapper {
+        position: absolute;
         height: 650px;
         width: 950px;
-        position: absolute;
     }
 }
 
 @media only screen and (max-width: 1472px) {
     .video_content-wrapper {
-        height: 393.750px;
         display: flex;
+        height: 393.750px;
         border-bottom: 20px solid #e26f6f;
     }
 
     .video {
-        width: 700px;
         height: auto;
+        width: 700px;
     }
 
     .video_overlay {
@@ -618,9 +610,9 @@ body {
     }
 
     .video_link-wrapper {
+        position: absolute;
         height: 393.750px !important;
         width: 700px;
-        position: absolute;
     }
 
     .video_link {
@@ -635,9 +627,9 @@ body {
     }
 
     .video_content-wrapper {
-        height: 675px;
         display: flex;
         flex-direction: column;
+        height: 675px;
         border: none;
     }
 
@@ -685,9 +677,9 @@ body {
 /* content in video section Styles  ------------------------------------------------  */
 
 .content_right {
-    background-color: #2d3240;
-    padding: 95px 100px;
     width: 100%;
+    padding: 95px 100px;
+    background-color: #2d3240;
 }
 
 .content_paragraph {
@@ -711,11 +703,11 @@ body {
 
 .content_button {
     color: #fff;
-    width: 100%;
-    border: 1px solid #fff;
-    line-height: 1em;
     font-size: 13px;
+    line-height: 1em;
     text-decoration: none;
+    border: 1px solid #fff;
+    width: 100%;
     padding: 12px 50px 7px;
     transition: .3s;
     border-radius: 5px;
@@ -775,11 +767,11 @@ body {
 /* Section Three Styles  ------------------------------------------------  */
 
 .section_three-wrapper {
-    background-color: #00a8b3;
     display: flex;
     justify-content: center;
     padding: 4% 25%;
     margin-top: 40px;
+    background-color: #00a8b3;
 }
 
 .fun_fact-wrapper {
@@ -827,9 +819,9 @@ body {
 .main_footer {
     position: relative;
     width: 100%;
+    padding: 2% 0;
     background-color: #2d3240;
     color: #fff;
-    padding: 2% 0;
 }
 
 .footer_nav {
@@ -854,9 +846,9 @@ body {
 }
 
 .footer_icon {
-    margin-top: 10px;
     color: #299fb3;
     font-size: 1.5em;
+    margin-top: 10px;
 }
 
 .fa-instagram {
