Created responsive nav hamburger menu

--- a/index/index.css
+++ b/index/index.css
@@ -93,19 +93,20 @@ body {
 }
 
 .logo_image {
-    height: 2.2em;
-    width: 2.2em;
+    height: 2.75em;
+    width: 2.75em;
     border-radius: 100%;
     align-self: center;
     margin-right: 15px;
     filter: drop-shadow(-1px 1px 1px #000);
+    z-index: 999;
 }
 
 .logo_text {
     color: #fff;
     font-weight: 700;
     display: inline;
-    font-size: 1.6em;
+    font-size: 2em;
     letter-spacing: 1.25px;
     line-height: 1.5;
     align-self: center;
@@ -124,37 +125,50 @@ body {
     margin-right: 14%;
 }
 
-.main_nav-list {
+.nav-list {
     display: flex;
     align-items: center;
     float: right;
-    height: 6.250em;
+    height: 6.7em;
     font-size: .95em;
 }
 
-.main_nav-list li {
+.nav_list-items{
     align-items: center;
     list-style-type: none;
 }
 
-.nav_list-item {
+.nav_list-items:first-child {
+    padding-right: 40px;
+}
+
+.nav_list-items:nth-child(2) {
+    padding-right: 40px;
+}
+
+.list_item-link {
     font-family: "Montserrat";
-    font-size: .9em;
+    font-size: .95em;
     color: #fff;
     text-decoration: none;
     text-shadow: -2px 2px 1px #000;
     opacity: .85;
-    transition: .3s;
 }
 
-.nav_list-item:hover {
+.list_item-link:hover {
     opacity: 1;
     transition: .3s;
 }
 
-.explore, .food , .contact {
-    padding-right: 40px;
+#nav:checked ~ .nav_list-wrapper .nav-list .nav_list-items .list_item-link {
+    opacity: 1;
+    display: block;
 }
+
+.hidden {
+    display: none;
+}
+
 
 
 @media only screen and (max-width: 1980px) and (max-height: 1100px) {
@@ -167,9 +181,97 @@ body {
     }
 }
 
-@media only screen and (max-width: 1100px) {
-    .main_nav {
+@media only screen and (max-width: 950px) {
+    .nav_list-wrapper {
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: all 0.4s ease;
+        z-index: -1;
+    }
+
+    .nav-list {
+        display: flex;
+        flex-direction: column;  
+        height: 100vh;
+        width: 100%;
+    }
+
+    .nav_list-items:first-child {
+        margin-top: 25%;
+        padding-right: 0px;
+    }
+    
+    .nav_list-items:nth-child(2) {
+        margin-top: 10%;
+        padding-right: 0px;
+    }
+
+    .nav_list-items:nth-child(3) {
+        margin-top: 10%;
+    }
+
+    .list_item-link {
         display: none;
+        font-size: 1.8em;
+        opacity: 0;
+    }
+
+    .nav_button {
+        position: fixed;
+        right: 0;
+        top: 35%;
+        display:inline-block;
+        width: fit-content;
+        height: fit-content;
+        cursor: pointer;
+        margin-right: 8%;
+        z-index: 9999;
+        border-radius: 50%;
+    }
+
+    .nav_button i {
+        display: block;
+        width: 27px;
+        height: 3px;
+        background: #fff;
+        box-shadow: -2px 2px 1px #000;
+        border-radius: 2px;
+        margin-left: 14px;
+    }
+
+    .nav_button i:nth-child(2) {
+        margin-top: 4px;
+    }
+
+    .nav_button i:nth-child(3) {
+        margin-top: 4px;
+    }
+
+    #nav:checked ~ .nav_list-wrapper {
+        height: 100vh;
+        background-color: rgba(35, 40, 55, 0.98);
+    }
+}
+
+@media only screen and (max-width: 950px) {
+   .logo_image {
+       display: none;
+   }
+
+   .logo_text {
+       font-size: 1.7em
+   }
+}
+
+@media only screen and (max-width: 570px) {
+   .logo_text {
+       z-index: -999;
+   }
+   
+    .nav_list-items:first-child {
+        margin-top: 45%;
+        padding-right: 0px;
     }
 }
 
