--- a/index/index.css
+++ b/index/index.css
@@ -165,12 +165,30 @@ body {
     display: block;
 }
 
+#nav:checked + .nav_button i {
+    background: #fff;
+    transition: transform 0.2s ease;
+    box-shadow: none;
+}
+
+#nav:checked + .nav_button i:nth-child(1) {
+    transform: translateY(14px) rotate(90deg);
+}
+
+#nav:checked + .nav_button i:nth-child(2) {
+    opacity: 0;
+}
+
+#nav:checked + .nav_button i:nth-child(3) {
+    transform:rotate(180deg);
+}
+
 .hidden {
     display: none;
 }
 
 
-
+/* 
 @media only screen and (max-width: 1980px) and (max-height: 1100px) {
     .nav_list-wrapper {
         margin-right: 8%;
@@ -179,7 +197,7 @@ body {
     .logo_wrapper {
         margin-left: 8%;
     }
-}
+} */
 
 @media only screen and (max-width: 950px) {
     .nav_list-wrapper {
@@ -225,14 +243,14 @@ body {
         width: fit-content;
         height: fit-content;
         cursor: pointer;
-        margin-right: 8%;
+        margin-right: 14%;
         z-index: 9999;
         border-radius: 50%;
     }
 
     .nav_button i {
         display: block;
-        width: 27px;
+        width: 26px;
         height: 3px;
         background: #fff;
         box-shadow: -2px 2px 1px #000;
