--- a/index/index.css
+++ b/index/index.css
@@ -12,7 +12,6 @@
 
 html {
     height: 100%;
-    ;
 }
 
 body {
@@ -188,23 +187,12 @@ body {
 }
 
 
-/* 
-@media only screen and (max-width: 1980px) and (max-height: 1100px) {
-    .nav_list-wrapper {
-        margin-right: 8%;
-    }
-
-    .logo_wrapper {
-        margin-left: 8%;
-    }
-} */
-
 @media only screen and (max-width: 950px) {
     .nav_list-wrapper {
         left: 0;
         width: 100%;
         height: 100%;
-        transition: all 0.4s ease;
+        transition: all 0.3s ease;
         z-index: -1;
     }
 
@@ -360,14 +348,16 @@ body {
     border-radius: 3px;
     margin-top: 2em;
     padding: 28px 40px 25px;
+    background-color: #e26f6f;
+    border: 1px solid #e26f6f;
     transition: .3s;
 }
 
-.button:hover {
+/* .button:hover {
     color: #fff;
     background-color: #e26f6f;
     border: 1px solid #e26f6f;
-}
+} */
 
 @media only screen and (max-width: 1980px) and (max-height: 1100px) {
     .main_header {
@@ -453,6 +443,12 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     z-index: -99999;
+}
+
+.article_link {
+    display: block;
+    height: 400px;
+    width: 400px;
 }
 
 .article_post {
@@ -561,6 +557,7 @@ body {
     height: fit-content;
     display: none;
     position: absolute;
+    color: #fff;
     bottom: 0;
     background: -webkit-linear-gradient(top, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.9) 75%);
     background: linear-gradient(to bottom, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.9) 75%);
@@ -570,18 +567,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: fit-content;
+    height: auto;
 }
 
 .post_heading {
-    font-size: 1.25em;
+    font-size: 1.4em;
     align-self: center;
     margin-bottom: 0.438em;
 }
 
 .post_description {
-    font-size: 15px;
+    font-size: 1em;
     text-align: left;
+    align-self :center;
     margin-bottom: 20px;
 }
 
@@ -591,20 +589,6 @@ body {
     padding: 12% 10%;
 }
 
-.overlay_button {
-    color: #fff;
-    line-height: 1em;
-    font-size: 13px;
-    text-decoration: none;
-    border: 1px solid #fff;
-    padding: 12px 100px 7px;
-    transition: .3s;
-}
-
-.overlay_button:hover {
-    color: #000;
-    background-color: #fff;
-}
 
 @media only screen and (max-width: 2222px) {
     .section_one-wrapper {
